--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pague Quando Receber</title>
     <link rel="stylesheet" href="./global.css">
-    <link href="https://fonts.cdnfonts.com/css/weezerfont" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/beyonders" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/ostrich-sans-black" rel="stylesheet">
   </head>
   <body>
